--- a/index.html
+++ b/index.html
@@ -441,13 +441,14 @@
     <section id="about" class="about">
         <h2>Who I Am</h2>
         <p style="text-align: center; font-size: 1.1rem; color: var(--text-secondary); max-width: 800px; margin: 0 auto;">
-            AI/ML Engineer | WorldQuant University | B.Tech CSE at RGPV Bhopal
+            AI/ML Engineer | WorldQuant University (Data Science Lab, AI Lab, Computer Vision Lab) | B.Tech CSE at RGPV Bhopal
         </p>
         <div class="about-grid">
             <div class="about-card">
                 <h3>🤖 AI/ML Engineering</h3>
                 <p>Specialized in building production-ready ML systems, from data preprocessing to model deployment. 
-                Experienced with deep learning, computer vision, NLP, and GenAI applications.</p>
+                Currently advancing through WorldQuant's Applied AI Lab focusing on Deep Learning for Computer Vision. 
+                Experienced with CNNs, ResNets, object detection, and GenAI applications.</p>
             </div>
             <div class="about-card">
                 <h3>🌍 Climate Tech Focus</h3>
@@ -508,12 +509,14 @@
             <div class="project-card">
                 <div class="project-header">WorldQuant Applied Data Science</div>
                 <div class="project-body">
-                    <p>Comprehensive ML portfolio: Housing Price Prediction (Mexico/Buenos Aires), Earthquake Damage 
-                    Prediction (Nepal), Air Quality Analysis (Nairobi). Real-world datasets with production-grade models.</p>
+                    <p>Comprehensive ML portfolio across multiple labs: Data Science Lab (Housing Price Prediction, Earthquake Damage 
+                    Prediction, Air Quality Analysis) and ongoing Applied AI Lab focusing on Deep Learning for Computer Vision 
+                    with CNNs, ResNets, and advanced architectures.</p>
                     <div class="project-tags">
+                        <span class="tag">Deep Learning</span>
+                        <span class="tag">Computer Vision</span>
+                        <span class="tag">CNNs</span>
                         <span class="tag">Regression</span>
-                        <span class="tag">Predictive Modeling</span>
-                        <span class="tag">Data Analysis</span>
                         <span class="tag">Pandas</span>
                     </div>
                     <div class="project-links">
