Update in portfolio!

--- a/index.html
+++ b/index.html
@@ -507,17 +507,35 @@
             </div>
 
             <div class="project-card">
-                <div class="project-header">WorldQuant Applied Data Science</div>
+                <div class="project-header">WorldQuant Applied Data Science Lab</div>
                 <div class="project-body">
-                    <p>Comprehensive ML portfolio across multiple labs: Data Science Lab (Housing Price Prediction, Earthquake Damage 
-                    Prediction, Air Quality Analysis) and ongoing Applied AI Lab focusing on Deep Learning for Computer Vision 
-                    with CNNs, ResNets, and advanced architectures.</p>
+                    <p>Comprehensive ML portfolio: Housing Price Prediction (Mexico/Buenos Aires), Earthquake Damage 
+                    Prediction (Nepal), Air Quality Analysis (Nairobi). Real-world datasets with production-grade regression 
+                    and predictive models.</p>
+                    <div class="project-tags">
+                        <span class="tag">Regression</span>
+                        <span class="tag">Predictive Modeling</span>
+                        <span class="tag">Data Analysis</span>
+                        <span class="tag">Pandas</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/Saanctity" target="_blank">GitHub →</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-header">WorldQuant Applied AI Lab: Computer Vision</div>
+                <div class="project-body">
+                    <p>Advanced deep learning for computer vision applications. Implementing CNN architectures (ResNet, VGG, 
+                    EfficientNet), transfer learning techniques, and building end-to-end image classification and object detection 
+                    pipelines with real-world datasets.</p>
                     <div class="project-tags">
                         <span class="tag">Deep Learning</span>
                         <span class="tag">Computer Vision</span>
                         <span class="tag">CNNs</span>
-                        <span class="tag">Regression</span>
-                        <span class="tag">Pandas</span>
+                        <span class="tag">Transfer Learning</span>
+                        <span class="tag">PyTorch</span>
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/Saanctity" target="_blank">GitHub →</a>
